# personal_growth_agent

./: .dockerignore  .gitignore  LICENSE  README.md
backend/: .env.example  Dockerfile  langgraph.json  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: fitness.py  general.py  graph.py  learning.py  life.py  state.py  supervisor.py
backend/app/core/: config.py  database.py  security.py
backend/app/db/: __init__.py  init_db.py  migrate.py  models.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  approval_service.py  data_store.py  embedding_service.py  llm_service.py  mcp_service.py  profile_service.py  rag_service.py  skill_service.py
backend/evaluation/: README.md  __init__.py  rag_eval_cases.json  ragas_experiment.py
backend/evaluation/corpus/: 01_adult_activity_guidelines.md  02_strength_progression_rpe.md  03_beginner_full_body_plan.md  04_squat_technique.md  05_hip_hinge_deadlift.md  06_push_pull_upper_body.md  07_running_progression.md  08_recovery_sleep_deload.md  (+4 more)
backend/tests/: test_advanced_rag.py  test_agent_graph.py  test_chat_stream.py  test_conversations_api.py  test_data_store.py  test_e2e_integration.py  test_external_rag_providers.py  test_fitness_rag_agent.py  test_health.py  test_learning_agent.py  test_mcp_service.py  test_migrations.py  test_phase3_mcp.py  test_profile_api.py  test_profile_service.py  test_rag_api.py  test_rag_evaluation.py  test_rag_service.py  test_real_rag_evaluation_assets.py  test_schemas.py  test_security.py  test_skill_api.py  test_skill_service.py
(+42 files in other folders)
