[project]
name = "personal-growth-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the Personal Growth Agent platform."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pypdf>=5.0.0,<7.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
line-length = 100
target-version = "py312"
